# MCP_Integration_crewai

./: .gitignore  AGENTOPS_FIX_GUIDE.md  CREWAI_MASTER_TEMPLATE.py  FIX_SUMMARY.md  LLM_REPLACEMENT_VISUAL.txt  QUICK_REFERENCE.md  README.md  REPLACING_OPENAI_GUIDE.md  RESOLUTION_SUMMARY.txt  crewai_agentops_integration.py  main.py  pyproject.toml  requirements.txt  serper_api_test.py  test_agentops.py  weather_api_test.py
